--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+ <title>Frontend Mentor | NFT preview card component</title>
+ <style>
+  .attribution {
+   font-size: 11px;
+   text-align: center;
+  }
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  .attribution a {
+   color: hsl(228, 45%, 44%);
+  }
+ </style>
+ <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+ <div class="container">
+  <img src="images/image-equilibrium.jpg" alt="">
+  <h1>Equilibrium #3429</h1>
+  <p>Our Equilibrium collection promotes balance and calm.</p>
+  <div class="num"><span class="first"><img src="images/icon-ethereum.svg" alt="">0.041 ETH</span>
+   <span><img src="images/icon-clock.svg" alt="">3 days left</span>
   </div>
+  <hr>
+  <div class="profile"><img src="images/image-avatar.png" alt="">
+   <p>Creation of <span>Jules Wyvern</span></p>
+  </div>
+ </div>
+
+ <div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="#">Adrian Salitico</a>.
+ </div>
 </body>
+
 </html>
